android/build_log_4.txt

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Configure project :capacitor-cordova-android-plugins
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:preBuild UP-TO-DATE
> Task :capacitor-android:preDebugBuild UP-TO-DATE
> Task :capacitor-android:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preDebugBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:writeDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResources UP-TO-DATE
> Task :capacitor-android:packageDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResValues UP-TO-DATE
> Task :app:checkDebugAarMetadata
> Task :capacitor-cordova-android-plugins:generateDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:packageDebugResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-android:processDebugManifest
> Task :capacitor-cordova-android-plugins:processDebugManifest
> Task :capacitor-android:parseDebugLocalResources
> Task :capacitor-cordova-android-plugins:parseDebugLocalResources
> Task :app:mergeDebugResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:processDebugManifestForPackage
> Task :capacitor-android:generateDebugRFile
> Task :capacitor-android:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugRFile

> Task :capacitor-android:compileDebugJavaWithJavac
D:\web app\Website_ Lung Cancer Detection App\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\CapacitorWebView.java:66: error: cannot find symbol
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM && configEdgeToEdge.equals("auto")) {
                                                        ^
  symbol:   variable VANILLA_ICE_CREAM
  location: class VERSION_CODES
D:\web app\Website_ Lung Cancer Detection App\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\CapacitorWebView.java:68: error: cannot find symbol
            boolean foundOptOut = getContext().getTheme().resolveAttribute(android.R.attr.windowOptOutEdgeToEdgeEnforcement, value, true);
                                                                                         ^
  symbol:   variable windowOptOutEdgeToEdgeEnforcement
  location: class attr
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :capacitor-android:compileDebugJavaWithJavac FAILED
[Incubating] Problems report is available at: file:///D:/web%20app/Website_%20Lung%20Cancer%20Detection%20App/android/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':capacitor-android:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  D:\web app\Website_ Lung Cancer Detection App\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\CapacitorWebView.java:66: error: cannot find symbol
          if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM && configEdgeToEdge.equals("auto")) {
                                                          ^
    symbol:   variable VANILLA_ICE_CREAM
    location: class VERSION_CODES
  D:\web app\Website_ Lung Cancer Detection App\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\CapacitorWebView.java:68: error: cannot find symbol
              boolean foundOptOut = getContext().getTheme().resolveAttribute(android.R.attr.windowOptOutEdgeToEdgeEnforcement, value, true);
                                                                                           ^
    symbol:   variable windowOptOutEdgeToEdgeEnforcement
    location: class attr
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 6s
33 actionable tasks: 13 executed, 20 up-to-date
